[project]
name = "city-simulation"
version = "0.1.0"
description = ""
authors = [
    {name = "Melody Lai",email = "enpngl.28@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas (>=1.1.1,<2.0.0)",
    "networkx (>=3.5,<4.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "osmnx (>=2.0.6,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
